# agent-ros-bridge

./: .bandit.yml  .buildinfo  .coverage  .env.example  .gitignore  .pre-commit-config.yaml  ACCOMPLISHMENTS.md  AI_AGENT_INTEGRATION_SUMMARY.md  AUDIT_REPORT_2026-04-06.md  AUDIT_REPORT_v0.6.0.md  AUDIT_REPORT_v0.6.1_FINAL.md  AUDIT_SUMMARY_2026-03-30.md  BIG_PICTURE.md  BRANCH_ANALYSIS_v0.6.7.md  BUG_REPORT.md  BUILD_FIXES.md  CHANGELOG.md  CI_TEST_FAILURE_ANALYSIS.md  CLAWHUB_SUBMISSION.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  CODE_ANALYSIS_CRITICAL.md  CODE_OF_CONDUCT.md  COMPETITIVE_ANALYSIS.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_AUDIT_v0.6.7.md  CONTRIBUTING.md  CONTRIBUTORS.md  CRITIQUE_RESPONSE_v0.6.7.md  DEEP_RESEARCH_REPORT.md  DEMO_GUIDE.md  DESIGN.md  DEVOPS_TDD_ASSESSMENT.md  DOCKER_ENV_FIX.md  DOCKER_FIX_SUMMARY.md  DOCKER_TESTING.md  Dockerfile  E2E_VALIDATION_REPORT.md  EXAMPLES_CRITICAL_ANALYSIS.md  (+160 more)
.clawhub/: lock.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  changelog-config.json  dependabot.yml
.learnings/: LEARNINGS.md
.openclaw/: workspace-state.json
_modules/: index.html
adhoc_e2e_results/: adhoc_report_20260324_051920.json  adhoc_report_20260324_052100.json  adhoc_report_20260324_052345.json  adhoc_report_20260324_064902.json  adhoc_report_20260324_064913.json  adhoc_report_20260324_064953.json
agent-ros-bridge/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INTEGRITY_REPORT.md  INTEGRITY_REVIEW.md  LAUNCH_STRATEGY.md  LICENSE  OVERVIEW.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE4_COMPLETE.md  README.md  TODO.md  docker-compose.macos.yml  package.xml  pyproject.toml  skill.yaml
agent-ros-bridge-fleet/: README.md  pyproject.toml
agent-ros-bridge-fleet/src/agent_ros_bridge_fleet/: __init__.py  orchestrator.py
agent-ros-bridge-fleet/tests/: __init__.py
agent-ros-bridge-sim/: README.md  pyproject.toml
agent-ros-bridge-tools/: README.md  pyproject.toml
agent-ros-bridge/.github/workflows/: ci.yml  release.yml
agent-ros-bridge/agent_ros_bridge/: __init__.py  actions.py  config.py  dashboard.py  mcp_server.py  metrics.py  openclaw.py
agent-ros-bridge/agent_ros_bridge/gateway_v2/: __init__.py
agent-ros-bridge/agent_ros_bridge/gateway_v2/auth/: __init__.py
agent-ros-bridge/agent_ros_bridge/gateway_v2/connectors/: __init__.py  ros1.py  ros2.py
agent-ros-bridge/agent_ros_bridge/gateway_v2/transports/: __init__.py  grpc.py  websocket.py
agent-ros-bridge/agent_ros_bridge/mcp/: __init__.py
agent-ros-bridge/config/: bridge.yaml.example
agent-ros-bridge/docs/: MACOS.md  MCP_QUICKSTART.md  ROS_RELEASE.md
agent-ros-bridge/examples/actions/: actions_demo.py  index.html  run_actions_demo.sh
agent-ros-bridge/packaging/conda/: build_robostack.sh
agent-ros-bridge/packaging/conda/recipe/: meta.yaml
agent-ros-bridge/packaging/homebrew/: agent-ros-bridge.rb
agent-ros-bridge/packaging/ros/: bloom.yaml
agent-ros-bridge/tests/: conftest.py
agent-ros-bridge/tests/integration/: test_websocket_transport.py
agent-ros-bridge/tests/unit/: test_metrics.py  test_safety.py  test_transport_manager.py
agent_ros_bridge/: __init__.py  __main__.py  _version.py  agentic.py  autogpt.py  cli.py  discovery.py  discovery_hardened.py  exceptions.py  hardware.py  langchain.py  main.py  mcp.py  memory.py  metrics.py  robot_api.py  safety.py  security_utils.py  tracing.py
agent_ros_bridge_msgs/: __init__.py
api/: index.html
config/: debug_config.yaml  fault_config.yaml  global_config.yaml  hal_config.yaml  legacy_openclaw.yaml.bak  robots.json  ros1_config.yaml  ros2_config.yaml
dashboard/: server.py
demo/: __init__.py  mock_bridge.py  mock_bridge_auth.py  mqtt_demo.py
docker/: Dockerfile  Dockerfile.dev  Dockerfile.mock  Dockerfile.optimized  Dockerfile.ros1  Dockerfile.ros2  Dockerfile.ros2.humble  Dockerfile.ros2.jazzy  Dockerfile.simulation  docker-compose.mqtt.yml  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  (+7 more)
examples/playground/art-studio/ros2/art_studio/: package.xml  setup.py
examples/playground/art-studio/ros2/art_studio/art_studio/: canvas_node.py  painter_node.py
examples/playground/mars-colony/ros2/mars_colony/: package.xml  setup.py
examples/playground/mars-colony/ros2/mars_colony/mars_colony/: __init__.py  builder_node.py  command_node.py  excavator_node.py  scout_node.py  solar_drone_node.py
examples/playground/talking-garden/ros2/garden/: package.xml  setup.py
examples/playground/talking-garden/ros2/garden/garden/: __init__.py  gardener_node.py  oracle_node.py  plant_node.py
examples/playground/theater-bots/ros2/theater/: package.xml
simulation/: CMakeLists.txt  __init__.py  package.xml  parallel_runner.py  scenario_runner.py
simulation/benchmarks/: __init__.py  latency_benchmark.py
simulation/launch/: sim_bringup.launch.py
simulation/models/turtlebot3_waffle/: model.config  model.sdf
simulation/models/ur5_arm/: model.config  model.sdf
simulation/scenarios/: basic_navigation.yaml  scenario_01_basic_navigation.yaml  scenario_02_obstacle_avoidance.yaml  scenario_03_dynamic_obstacles.yaml  scenario_04_narrow_corridors.yaml  scenario_05_multiple_waypoints.yaml  scenario_06_pick_and_place.yaml  scenario_07_emergency_stop.yaml  scenario_08_sensor_failure.yaml  scenario_09_recovery_behavior.yaml  scenario_10_multi_robot.yaml
simulation/simulation/: __init__.py
simulation/worlds/: empty_warehouse.sdf
skills/agent-ros-bridge/msgs/: README.md  package.xml
skills/agent-ros-bridge/msgs/msg/: EmergencyStop.msg  RobotState.msg  SafetyCertificate.msg  SafetyLimits.msg  TrajectoryValidationRequest.msg  TrajectoryValidationResponse.msg
skills/agent-ros-bridge/msgs/srv/: ClearEmergencyStop.srv  GetSafetyLimits.srv  GetSafetyStatus.srv  TriggerEmergencyStop.srv  ValidateTrajectory.srv
src/agent_ros_bridge_msgs/: CMakeLists.txt  package.xml
src/agent_ros_bridge_msgs/msg/: Constraint.msg  ContextQuery.msg  ContextResponse.msg  Entity.msg  Intent.msg
src/agent_ros_bridge_msgs/srv/: ParseIntent.srv  ResolveContext.srv
(+829 files in other folders)
