<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openclaw_ros_bridge</name>
  <version>1.0.0</version>
  <description>Universal ROS1/ROS2 + OpenClaw Adaptive Bridge Framework for Embodied Intelligence. Native support for ROS1 Noetic/ROS2 Humble/Jazzy, OpenClaw v1.x/v2.x, Hardware Abstraction Layer, fault self-recovery, real-time scheduling, and full-stack observability.</description>
  <maintainer email="dev@openclaw-ros.org">OpenClaw-ROS Dev Team</maintainer>
  <license>MIT</license>
  <url type="repository">https://github.com/your-username/openclaw-ros-bridge</url>
  <author email="dev@openclaw-ros.org">OpenClaw-ROS Dev Team</author>
  <!-- Keywords removed for ROS package format 3 compatibility -->

  <!-- ROS1/ROS2 Dual Build Dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Core ROS Dependencies (Cross-Compatible) -->
  <build_depend>rospy</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>launch_ros</build_depend>

  <!-- ROS1/ROS2 Compatibility & Tools -->
  <build_depend>ros1_bridge</build_depend>
  <build_depend>rosbridge_server</build_depend>
  <build_depend>rqt</build_depend>
  <build_depend>rqt_plot</build_depend>
  <build_depend>rqt_console</build_depend>

  <!-- Execution Dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros1_bridge</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>rqt</exec_depend>
  <exec_depend>rqt_plot</exec_depend>
  <exec_depend>rqt_console</exec_depend>

  <!-- Testing Dependencies -->
  <test_depend>pytest</test_depend>
  <test_depend>pytest-cov</test_depend>
  <test_depend>pytest-benchmark</test_depend>
  <test_depend>mock</test_depend>

  <!-- Build Type (ROS2) + Catkin Compatibility (ROS1) -->
  <export>
    <build_type>ament_python</build_type>
    <catkin />
  </export>
</package>