[build-system]
requires = ["hatchling>=1.18.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "openclaw-ros-bridge"
description = "Universal ROS1/ROS2 bridge for OpenClaw AI agents to control robots and embodied intelligence systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "OpenClaw ROS Team", email = "dev@openclaw-ros.org"},
]
keywords = [
    "ros",
    "ros2",
    "robotics",
    "ai",
    "openclaw",
    "gateway",
    "iot",
    "automation",
    "embodied-intelligence",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
    "Typing :: Typed",
]
dynamic = ["version"]

dependencies = [
    "pyyaml>=6.0.1",
    "psutil>=5.9.5",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.7.0; python_version<'3.10'",
]

[project.optional-dependencies]
# Transport protocols
transports = [
    "websockets>=11.0",
    "grpcio>=1.56.0",
    "grpcio-tools>=1.56.0",
    "paho-mqtt>=1.6.0",
]

# ROS connectors
ros2 = [
    "rclpy>=3.3.0",
]

# Industrial connectors
industrial = [
    "pymodbus>=3.5.0",
]

# Drone connectors
drones = [
    "pymavlink>=2.4.30",
]

# Development tools
dev = [
    "black>=23.7.0",
    "ruff>=0.0.280",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "commitizen>=3.6.0",
]

# Testing
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.3.0",
    "factory-boy>=3.3.0",
    "faker>=19.0.0",
    "responses>=0.23.0",
    "aioresponses>=0.7.4",
]

# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.1.0",
    "mkdocstrings[python]>=0.22.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
]

# Security
security = [
    "bandit[toml]>=1.7.5",
    "safety>=2.3.0",
]

# All extras
all = [
    "openclaw-ros-bridge[transports,ros2,industrial,drones,dev,test,docs,security]",
]

[project.urls]
Homepage = "https://github.com/webthree549-bot/openclaw-ros-bridge"
Documentation = "https://openclaw-ros-bridge.readthedocs.io"
Repository = "https://github.com/webthree549-bot/openclaw-ros-bridge"
Issues = "https://github.com/webthree549-bot/openclaw-ros-bridge/issues"
Changelog = "https://github.com/webthree549-bot/openclaw-ros-bridge/blob/main/CHANGELOG.md"

[project.scripts]
openclaw-gateway = "openclaw_ros_bridge.gateway_v2.__main__:main"
openclaw-ros-bridge = "openclaw_ros_bridge.gateway_v2.__main__:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "openclaw_ros_bridge/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/openclaw_ros_bridge",
    "/tests",
    "/docs",
    "/scripts",
    "/docker",
    "/config",
    "/LICENSE",
    "/README.md",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
]

[tool.hatch.build.targets.wheel]
packages = ["openclaw_ros_bridge"]

# ==========================================
# Black - Code formatter
# ==========================================
[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | docs
)/
'''

# ==========================================
# isort - Import sorting
# ==========================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["openclaw_ros_bridge"]

# ==========================================
# Ruff - Fast Python linter
# ==========================================
[tool.ruff]
target-version = "py38"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
    "D203",  # 1 blank line required before class docstring (conflicts with D211)
    "D213",  # Multi-line docstring summary should start at the second line
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "docs",
    ".eggs",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*" = ["D", "ARG"]
"**/__init__.py" = ["F401"]  # Unused imports in __init__.py

# ==========================================
# MyPy - Type checking
# ==========================================
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ==========================================
# Pytest - Testing
# ==========================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "ros: ROS-dependent tests",
    "hardware: Hardware-dependent tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
asyncio_mode = "auto"

# ==========================================
# Coverage - Test coverage
# ==========================================
[tool.coverage.run]
source = ["openclaw_ros_bridge"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "openclaw_ros_bridge/_version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

# ==========================================
# Bandit - Security linter
# ==========================================
[tool.bandit]
skips = ["B101"]  # Skip assert_used warnings in tests
exclude_dirs = ["tests"]

# ==========================================
# Commitizen - Commit message format
# ==========================================
[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
version_files = [
    "openclaw_ros_bridge/__init__.py:__version__",
    "pyproject.toml:version",
]
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]
