[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-ros-bridge"
version = "0.6.1"
description = "Universal interface for AI agents to control ROS robots via natural language"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Agent ROS Bridge Contributors"}
]
keywords = [
    "ros",
    "ros2",
    "robotics",
    "ai",
    "agents",
    "openclaw",
    "natural-language",
    "automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "websockets>=11.0",
    "cryptography>=41.0.0",
    "aiohttp>=3.8.0",
    "aiosqlite>=0.19.0",
    "redis>=4.5.0",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "pdoc3>=0.10.0",
]
all = [
    "agent-ros-bridge[dev,test,docs]"
]

[project.urls]
Homepage = "https://github.com/webthree549-bot/agent-ros-bridge"
Documentation = "https://agent-ros-bridge.readthedocs.io"
Repository = "https://github.com/webthree549-bot/agent-ros-bridge"
Issues = "https://github.com/webthree549-bot/agent-ros-bridge/issues"
Changelog = "https://github.com/webthree549-bot/agent-ros-bridge/blob/main/CHANGELOG.md"

[project.scripts]
agent-ros-bridge = "agent_ros_bridge.cli:main"
arb = "agent_ros_bridge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agent_ros_bridge"]

[tool.hatch.version]
path = "agent_ros_bridge/__init__.py"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by black)
    "W293",  # Blank line with whitespace - too noisy
    "SIM102", # Collapsible if - stylistic preference
    "SIM117", # Multiple with statements - often clearer as nested
    "E402",   # Module import not at top - needed for conditional imports
    "SIM105", # Suppressible exception - stylistic
    "SIM108", # If-else block instead of if-exp - stylistic
    "SIM115", # Open file with context handler - often intentional
    "SIM116", # If-else block instead of dict lookup - stylistic
    "SIM222", # Expr or true - often intentional
    "N802",   # Invalid function name - often for callbacks
    "N806",   # Non-lowercase variable - often for constants
    "N818",   # Error suffix on exception - API compatibility
    "E701",   # Multiple statements on one line - stylistic
    "E741",   # Ambiguous variable name - often for loop vars
    "B007",   # Unused loop control variable - often intentional
    "B017",   # Assert raises exception - common in tests
    "UP035",  # Deprecated import - often for compatibility
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "F401", "F841", "E722", "F821", "F811", "F822", "E712", "W291"]  # Allow various patterns in tests
"**/__init__.py" = ["F401", "I001"]  # Allow unused imports in __init__.py (public API)
"agent_ros_bridge/__init__.py" = ["F401", "I001"]  # Public API exports
"agent_ros_bridge/actions/__init__.py" = ["F401"]  # Conditional ROS imports
"agent_ros_bridge/gateway_v2/connectors/*.py" = ["F401", "E722", "F821"]  # Conditional ROS imports
"agent_ros_bridge/integrations/*.py" = ["F401", "F841"]  # Optional dependency imports
"examples/**/*.py" = ["F401", "F841", "E722"]  # Examples often have unused vars/imports
"scripts/**/*.py" = ["F401", "F841"]  # Scripts often have unused vars
"simulation/**/*.py" = ["F401", "F841", "E722"]  # Simulation code
"frameworks/**/*.py" = ["F401"]  # Framework integrations

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "ros: ROS-dependent tests",
]

[tool.coverage.run]
source = ["agent_ros_bridge"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "agent_ros_bridge/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 95

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Skip assert warnings in tests
