[flake8]
max-line-length = 120
extend-ignore = E203, W503
exclude = __pycache__,venv,.venv,build,install,log,catkin_ws,docs,_build

[black]
line-length = 120
target-version = py38
exclude = __pycache__,venv,.venv,build,install,log,catkin_ws,docs,_build

[pytest]
testpaths = test
addopts = -v --cov=openclaw_ros_bridge --cov=demo --cov-report=term --cov-report=html:test_coverage
python_files = test_*.py
python_classes = Test*
python_functions = test_*

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[metadata]
license_files = LICENSE

[build_ext]
inplace = True