<?xml version="1.0"?>
<package format="3">
  <name>simulation</name>
  <version>0.6.1</version>
  <description>Simulation environment for Agent ROS Bridge testing</description>
  <maintainer email="dev@agent-ros-bridge.org">Agent ROS Bridge Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>tf2_ros</depend>
  <depend>rosbridge_server</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path="models"/>
    <gazebo_ros gazebo_media_path="worlds"/>
  </export>
</package>
