<?xml version="1.0"?>
<package format="3">
  <name>agent_ros_bridge_safety_msgs</name>
  <version>0.6.1</version>
  <description>Message definitions for Agent ROS Bridge safety system</description>
  <maintainer email="safety@agent-ros-bridge.org">ENG-2 Safety Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
