<?xml version="1.0"?>
<package format="3">
  <name>art_studio</name>
  <version>0.3.3</version>
  <description>ROS2 Art Studio - Painting robots</description>
  <maintainer email="dev@openclaw.ai">OpenClaw</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>