<?xml version="1.0"?>
<package format="3">
  <name>mars_colony</name>
  <version>0.3.3</version>
  <description>ROS2 Mars Colony - Robot fleet</description>
  <maintainer email="dev@openclaw.ai">OpenClaw</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>