<?xml version="1.0"?>
<package format="3">
  <name>garden</name>
  <version>0.3.3</version>
  <description>ROS2 Talking Garden - Plant sensors and poet</description>
  <maintainer email="dev@openclaw.ai">OpenClaw</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>